# Habit-tracker

./: constants.ts  package-lock.json  package.json  types.ts
.github/workflows/: main.yml
app/: globals.css  layout.tsx  page.tsx
components/: habit-card.tsx  habits-board.tsx  history-chart.tsx  progress-banner.tsx
components/ui/: chart.tsx  select.tsx
hooks/: use-user-points.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240920160524_create_habits_table.sql  20240922211305_create_todos_table.sql  20240923045937_drop_user_name_column.sql  20241005151020_new_recordssss.sql
src-tauri/src/: db.rs  lib.rs  main.rs  tauri_commands.rs
src-tauri/src/tauri_commands/: habits.rs  records.rs  users.rs
