[package]
name = "app"
version = "1.0.0"
description = "Offline habit tracker created with Tauri and Next.js"
authors = ["you"]
license = ""
repository = "https://github.com/Radiant2003/Habit-tracker"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
futures = "0.3"
chrono = "0.4"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
